계속 작업중

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -57,7 +57,7 @@
     <div class="recentitems portfolio">
       <div class="portfolio-item graphic-design">
         <div class="he-wrap tpl6">
-          <%= image_tag ("portfolio_01.jpg"), :classs => "img-responsive" %>
+          <%= image_tag ("portfolio_01.jpg"), :class => "img-responsive" %>
           <div class="he-view">
             <div class="bg a0" data-animate="fadeIn">
               <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
