--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Starter Template for Bootstrap</title>
+  <title>Nexters | <%= content_for (:title)%></title>
+
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -34,7 +35,7 @@
       <div id="navbar" class="collapse navbar-collapse navbar-right">
         <ul class="nav navbar-nav">
           <li class="active"><%= link_to "Home", "/"%></li>
-          <li> <%=link_to "소개", "intro"%></li>
+          <li> <%=link_to "소개", "about"%></li>
           <li><%= link_to "활동", "activities", :class =>"dropdown"%></li>
           <li><%= link_to "작품", "products"%> </li>
           <li><%= link_to "링크", "link"%> </li>
